--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header a:hover{
 /*Showcase*/
 #showcase {
   min-height: 400px;
-  background:url('./img/showcase.jpg') no-repeat 0 -400px;
+  background:url('showcase.jpg') no-repeat 0 -400px;
   text-align: center;
   color: #ffffff;
 }
@@ -209,7 +209,7 @@ footer {
     padding: 0 7px 0 7px;
   }
 
-  
+
 
   #showcase h1{
     margin-top: 40px;
