--- a/style.css
+++ b/style.css
@@ -176,6 +176,73 @@ ul#services li{
   background: #e6e6e6;
 }
 
+/*testimonial*/
+#testimonial{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 60vh;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.testimonial {
+  position: relative;
+  background-color: #fafafa;
+  color: #424242;
+  border-radius: 4px;
+  padding: 2rem 2rem 3rem 2rem;
+  margin: 0 auto;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12),
+              0 1px 2px rgba(0,0,0,0.24);
+}
+
+.testimonial_avatar {
+  border-radius: 50%;
+  max-width: 4rem;
+  position: absolute;
+  top: -1.5rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  box-shadow: 0 3px 6x rgba(0,0,0,0.16),
+              0 3px 6px rgba(0,0,0,0.23);
+}
+
+.testimonial_user{
+  text-align: center;
+  margin: 1.5rem 0 1rem  0;
+}
+
+.user_name{
+  font-size: 1.15rem;
+  margin: .5rem;
+}
+
+.user_company{
+  color: #BDBDBD;
+  margin-top: .4rem;
+  font-size: .85rem;
+  letter-spacing: .03rem;
+}
+
+.testimonial_text{
+  text-align: center;
+  font-weight: 300;
+  font-size: 1rem;
+  line-height: 1.85rem;
+}
+
+@media (max-width: 800px) {
+
+  .testimonial{
+    width: 45%;
+  }
+
+}
+
+
 footer {
   padding: 20px;
   margin-top: 20px;
